I updated the css and the html file .

--- a/index.html
+++ b/index.html
@@ -36,6 +36,51 @@
   </div>
 
 
+  <div id="about">
+        <div class="tab-container">
+            <div class="row">
+                <div class="about-col-1">
+                    <img src="images/sec-img.jpg">
+                </div>
+                <div class="about-col-2">
+                    <h1 class="sub-title">About</h1>
+                    <p>I design and code beautifully simple things, and I
+                        love what I do. I'm a UX/UI and visual designer who
+                        strives to create frictionless user experiences that
+                        help elevate brands.</p>
+                    <div class="tab-titles">
+                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('education')">Education</p>
+                    </div>
+                    <div class="tab-contents active-tab" id="skills">
+                        <ul>
+                            <li><span>Frontend Development</span><br>Bilding seamless Web Applications</li>
+                            <li><span>UI/UX Design</span><br>Designing web and app interfaces </li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="experience">
+                        <ul>
+                            <li><span>April 2022-Present</span><br>Frontend Engineering student at AltSchool Africa</li>
+                            <li><span>April 2022-May2022</span><br>Try kibo Web foundations Class</li>
+                            <li><span>January 2022-April2022</span><br>Hydraxx Design Bootcamp</li>
+                            <li><span>Sept 2021-Dec2021</span><br>AboCoders Web Development Trainee</li>
+                        </ul>
+                    </div>
+                    <div class="tab-contents" id="education">
+                        <ul>
+                          <li><span>2012-2015</span><br>Junior Secondary School</li>
+                            <li><span>2015-2018</span><br>Senior Secondary School</li>
+                            <li><span>2018-2024</span><br>Bsc Agric</li>
+                            <li><span>2022-2025</span><br>Bsc Computer Science</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+   </div>
+
+
 
 
 
