I commeted on my code

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>Aisha Daodu</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <!--This is the start of the code-->
   <div class="container">
     <div class="nav-bar">
       <img src="images/logo-img.png" class="logo">
       <nav>
         <ul>
+          <!--I used the # here because I didn't have my code liked to the rest of the pages-->
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#">Projects</a></li>
           <li><a href="#">Cv</a></li>
           <li><a href="#">Hire me</a></li>
